[APIv5.8] Updated cSpell Dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,43 @@
 {
-	"cSpell.ignoreWords": [
+	"cSpell.enabled": true,
+	"cSpell.words": [
+		"Timeout",
+		"Workflows",
 		"admin",
+		"alright",
+		"apps",
 		"authed",
+		"basemethod",
+		"basemodule",
+		"blogging",
+		"bson",
+		"cherrypick",
 		"classmethod",
-		"ctrl",
+		"conn",
 		"dict",
-		"enticated",
-		"entication",
+		"envs",
+		"extn",
+		"extns",
+		"firefox",
 		"jobtitle",
 		"limpd",
-		"repo",
+		"masaar",
+		"reauth",
+		"remotehost",
+		"repos",
+		"sdks",
+		"setup",
+		"sharded",
+		"signout",
+		"specs",
+		"stats",
 		"submodule",
 		"tuple",
 		"vars",
-		"weakref"
+		"weakref",
+		"websockets",
+		"workflow",
+		"أكمي",
+		"مجهول"
 	]
 }
