--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,16 +4,20 @@
 		"Timeout",
 		"Workflows",
 		"admin",
+		"aiohttp",
 		"alright",
 		"apps",
+		"asyncio",
 		"authed",
 		"basemethod",
 		"basemodule",
 		"blogging",
 		"bson",
+		"callables",
 		"cherrypick",
 		"classmethod",
 		"conn",
+		"debian",
 		"dict",
 		"envs",
 		"extn",
@@ -25,7 +29,9 @@
 		"reauth",
 		"remotehost",
 		"repos",
+		"scaffolded",
 		"sdks",
+		"sepcs",
 		"setup",
 		"sharded",
 		"signout",
@@ -36,6 +42,7 @@
 		"vars",
 		"weakref",
 		"websockets",
+		"workdir",
 		"workflow",
 		"أكمي",
 		"مجهول"
